--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <header>
-        
+        <img src="assets/images/logo.png" alt="image of the phillers logo">
+        <nav class="nav">
+            
+        </nav>
     </header>
 </body>
 </html>
