--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
                                         <img src="assets/images/moi.jpg" class="rounded-circle" height="50" alt="Avatar" loading="lazy" />
                                         <div class="d-flex align-items-center w-100 ps-3">
                                             <div class="w-100">
+                                                <form action="reset"> 
                                                 <input type="text" id="form143" class="form-control form-status border-0 py-1 px-0"
-                                                placeholder="What is up?" />
+                                                placeholder="What is up?" minlength="5" required />
                                             </div>
                                         </div>
                                     </div>
@@ -101,7 +102,8 @@
                                     </li>
                                 </ul>
                                     <div class="d-flex align-items-center">
-                                        <button type="button" class="btn btn-primary btn-rounded">Post feed</button>
+                                            <button type="button" class="btn btn-primary btn-rounded">Post feed</button>
+                                        </form>
                                     </div>
                     </div>
                 </div>
@@ -130,7 +132,7 @@
                             <span class="far fa-comment"></span>
                           </li>
                           <li>
-                            <span class="far fa-heart"></span><span class="small ps-2">35</span></li>
+                            <span  class="far fa-heart"></span><span class="small ps-2">35</span></li>
                           <li>
                             <span class="far fa-share-square"></span>
                           </li>
