--- a/index.html
+++ b/index.html
@@ -77,36 +77,36 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card shadow-0">
-                                <div class="card-body border-bottom pb-2">
-                                    <div class="d-flex">
-                                        <img src="assets/images/moi.jpg" class="rounded-circle" height="50" alt="Avatar" loading="lazy" />
-                                        <div class="d-flex align-items-center w-100 ps-3">
-                                            <div class="w-100">
-                                                <form action="reset"> 
-                                                <input type="text" id="form143" class="form-control form-status border-0 py-1 px-0"
-                                                placeholder="What is up?" minlength="5" required />
-                                            </div>
-                                        </div>
+                    <div class="card shadow-0">
+                        <div class="card-body border-bottom pb-2">
+                            <div class="d-flex">
+                                <img src="assets/images/moi.jpg" class="rounded-circle" height="50" alt="Avatar" loading="lazy" />
+                                <div class="d-flex align-items-center w-100 ps-3">
+                                    <div class="w-100">
+                                        <form action="reset"> 
+                                        <input type="text" id="form143" class="form-control form-status border-0 py-1 px-0"
+                                        placeholder="What is up?" minlength="5" required />
                                     </div>
-                            <div class="d-flex justify-content-between">
-                                <ul class="list-unstyled d-flex flex-row ps-3 pt-3">
-                                    <li>
-                                        <a href=""><span class="far fa-image pe-2"></span></a>
-                                    </li>
-                                    <li>
-                                        <a href=""><span class="far fa-smile px-2"></span></a>
-                                    </li>
-                                    <li>
-                                        <a href=""><span class="far fa-calendar-check px-2"></span></a>
-                                    </li>
-                                </ul>
-                                    <div class="d-flex align-items-center">
-                                            <button type="button" class="btn btn-primary btn-rounded">Post feed</button>
-                                        </form>
-                                    </div>
+                                </div>
+                            </div>
+                    <div class="d-flex justify-content-between">
+                      <ul class="list-unstyled d-flex flex-row ps-3 pt-3">
+                        <li>
+                            <a href=""><span class="far fa-image pe-2"></span></a>
+                        </li>
+                        <li>
+                            <a href=""><span class="far fa-smile px-2"></span></a>
+                        </li>
+                        <li>
+                            <a href=""><span class="far fa-calendar-check px-2"></span></a>
+                        </li>
+                      </ul>
+                        <div class="d-flex align-items-center">
+                        <button type="button" class="btn btn-primary btn-rounded">Post feed</button>
+                      </form>
+                      </div>
                     </div>
-                </div>
+                  </div>
                 </div>
                 <div class="d-flex p-3 border-bottom">
                     <img src="assets/images/profile_pic.jpg" class="rounded-circle"
@@ -238,7 +238,9 @@
                   </div>
             </section>
         </main>
+        <footer>
+          &copy;Phillers
+        </footer>
     </div>
-    
 </body>
 </html>
