--- a/login.html
+++ b/login.html
@@ -36,3 +36,36 @@
                 </div>
             </div>
         </header>
+        <main>
+            <div class="container-sm"><div class="border border-left border-right px-0">
+                <div class="p-3 border-bottom">
+                    <p class="lead">Please put in your login details</p>
+                        <form class="form-login" action="profile.html">
+                            <div class="mb-3">
+                                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+                                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputPassword1" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" required minlength="8" maxlength="20">
+                            <div id="passwordHelpBlock" class="form-text">
+                                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, or special characters
+                            </div>
+                            </div>
+                            <div class="mb-3 form-check">
+                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                <label class="form-check-label" for="exampleCheck1">Remember me</label>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                </div>
+              </div>
+            </div>
+        </main>
+        <footer>
+             &copy;Phillers
+        </footer>
+        </div>
+        
+        </body>
