--- a/profile.html
+++ b/profile.html
@@ -36,3 +36,168 @@
                 </div>
             </div>
         </header>
+        <main>
+            <div class="container">
+                <div class="row">
+                    <div class="profile-main-left">
+                        <h3 class="display-3">phm</h3>
+                        <img src="assets/images/moi.jpg" alt="profile picture of user" class="rounded-circle">
+                        <div class="d-flex justify-content-center">
+                            <div class="row">
+                                <div class="text-center">
+                                    <h4>About me</h4>
+                                </div>
+                                <ul class="list-unstyled">
+                                    <li class="list-item"><h6>Name</h6> <p class="p-style lead border-bottom">Phillip Mikalsen</p></li>
+                                    <li class="list-item"><h6>From</h6> <p class="p-style lead border-bottom">Norway</p></li>
+                                    <li class="list-item"><h6>Work</h6><p class="p-style lead border-bottom">Developer</p></li>
+                                    <li class="list-item"><h6>Hobbies</h6><p class="p-style lead border-bottom">Gaming <br> Series <br> Development</p></li>
+                                </ul>
+                                <div class="text-center">
+                                    <h4>Contacts</h4>
+                                </div>
+                                <ul class="list-group-flush">
+                                    <li class="list-group-item">randomHero</li>
+                                    <li class="list-group-item">Lislerud</li>
+                                    <li class="list-group-item">OlivKing</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-sm">
+                        <div class="card">
+                        </div>
+                            <div class="card shadow-0">
+                                <div class="card-body border-bottom pb-2">
+                                    <div class="d-flex">
+                                        <img src="assets/images/moi.jpg" class="rounded-circle" height="50" alt="Avatar" loading="lazy" />
+                                            <div class="d-flex align-items-center w-100 ps-3">
+                                                <div class="w-100">
+                                                    <input type="text" id="form143" class="form-control form-status border-0 py-1 px-0"
+                                                    placeholder="What is up?" minlength="5" required />
+                                                </div>
+                                        </div>
+                                    </div>
+                                    <div class="d-flex justify-content-between">
+                                        <ul class="list-unstyled d-flex flex-row ps-3 pt-3">
+                                            <li>
+                                                <a href=""><span class="far fa-image pe-2"></span></a>
+                                            </li>
+                                            <li>
+                                                <a href=""><span class="far fa-smile px-2"></span></a>
+                                            </li>
+                                            <li>
+                                                <a href=""><span class="far fa-calendar-check px-2"></span></a>
+                                            </li>
+                                        </ul>
+                                        <div class="d-flex align-items-center">
+                                            <button type="button" class="btn btn-primary btn-rounded">Post feed</button>
+                                        </div>
+                                    </div>
+                                    <div class="d-flex p-3 border-bottom border-top">
+                                        <img src="assets/images/profile_pic.jpg" class="rounded-circle"
+                                          height="50" alt="Avatar" loading="lazy" />
+                                        <div class="d-flex w-100 ps-3">
+                                          <div>
+                                            <a href="profile.html">
+                                              <h6 class="text-body">
+                                                randomHero
+                                                <span class="small text-muted font-weight-normal">@randomHero</span>
+                                                <span class="small text-muted font-weight-normal"> • </span>
+                                                <span class="small text-muted font-weight-normal">30m ago</span>
+                                              </h6>
+                                            </a>
+                                            <p style="line-height: 1.2;">
+                                              Lorem ipsum dolor, sit amet adipisicing elit.
+                                              Nobis assumenda eveniet ipsum libero mollitia vero doloremque
+                                               molestiae omnis, quam iure dicta reprehenderit
+                                              distinctio facere labore atque, sit quo.
+                                            </p>
+                                            <ul class="list-unstyled d-flex justify-content-between mb-0 pe-xl-5">
+                                              <li>
+                                                <span class="far fa-comment"></span>
+                                              </li>
+                                              <li>
+                                                <span class="far fa-heart"></span><span class="small ps-2">31</span></li>
+                                              <li>
+                                                <span class="far fa-share-square"></span>
+                                              </li>
+                                            </ul>
+                                          </div>
+                                        </div>
+                                      </div>
+                                      <div class="d-flex p-3 border-bottom border-top">
+                                        <img src="assets/images/profile_pic.jpg" class="rounded-circle"
+                                          height="50" alt="Avatar" loading="lazy" />
+                                        <div class="d-flex w-100 ps-3">
+                                          <div>
+                                            <a href="profile.html">
+                                              <h6 class="text-body">
+                                                Lislerud
+                                                <span class="small text-muted font-weight-normal">@Lislerud</span>
+                                                <span class="small text-muted font-weight-normal"> • </span>
+                                                <span class="small text-muted font-weight-normal">2h ago</span>
+                                              </h6>
+                                            </a>
+                                            <p style="line-height: 1.2;">
+                                              Lorem ipsum dolor, sit amet adipisicing elit.
+                                              Nobis assumenda eveniet ipsum libero mollitia vero doloremque
+                                               molestiae omnis, quam iure dicta reprehenderit
+                                              distinctio facere labore atque, sit quo.
+                                            </p>
+                                            <ul class="list-unstyled d-flex justify-content-between mb-0 pe-xl-5">
+                                              <li>
+                                                <span class="far fa-comment"></span>
+                                              </li>
+                                              <li>
+                                                <span class="far fa-heart"></span><span class="small ps-2">38</span></li>
+                                              <li>
+                                                <span class="far fa-share-square"></span>
+                                              </li>
+                                            </ul>
+                                          </div>
+                                        </div>
+                                      </div>
+                                      <div class="d-flex p-3 border-bottom border-top">
+                                        <img src="assets/images/profile_pic.jpg" class="rounded-circle"
+                                          height="50" alt="Avatar" loading="lazy" />
+                                        <div class="d-flex w-100 ps-3">
+                                          <div>
+                                            <a href="profile.html">
+                                              <h6 class="text-body">
+                                                OlivKing
+                                                <span class="small text-muted font-weight-normal">@OlivKing</span>
+                                                <span class="small text-muted font-weight-normal"> • </span>
+                                                <span class="small text-muted font-weight-normal">1h ago</span>
+                                              </h6>
+                                            </a>
+                                            <p style="line-height: 1.2;">
+                                              Lorem ipsum dolor, sit amet adipisicing elit.
+                                              Nobis assumenda eveniet ipsum libero mollitia vero doloremque
+                                               molestiae omnis, quam iure dicta reprehenderit
+                                              distinctio facere labore atque, sit quo.
+                                            </p>
+                                            <ul class="list-unstyled d-flex justify-content-between mb-0 pe-xl-5">
+                                              <li>
+                                                <span class="far fa-comment"></span>
+                                              </li>
+                                              <li>
+                                                <span class="far fa-heart"></span><span class="small ps-2">50</span></li>
+                                              <li>
+                                                <span class="far fa-share-square"></span>
+                                              </li>
+                                            </ul>
+                                          </div>
+                                        </div>
+                                      </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </main>
+        <footer>
+            &copy;Phillers
+        </footer>
+        </div>
+        </body>
