--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/3085842107.js" crossorigin="anonymous"></script>
-    <script defer src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    <link rel="stylesheet" href="dist/css/main.css">
+    <script defer src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <link rel="stylesheet" href="/dist/css/main.css">
     <title>css frameworks</title>
 </head>
 <body>
@@ -21,9 +21,9 @@
                     <div class="col-sm">
                         <nav class="nav">
                             <ul class="list-inline">
-                                <li class="list-inline-item"><a href="index.html" class="nav-link"> Home</a></li>
-                                <li class="list-inline-item"><a href="profile.html" class="nav-link"> Profile</a></li>
-                                <li class="list-inline-item"><a href="login.html" class="nav-link">Log in</a></li>
+                                <li class="list-inline-item"><a href="/" class="nav-link"> Home</a></li>
+                                <li class="list-inline-item"><a href="/profile.html" class="nav-link"> Profile</a></li>
+                                <li class="list-inline-item"><a href="/login.html" class="nav-link">Log in</a></li>
                             </ul>
                             <div class="input-group">
                                 <input type="search" id="form1" class="form-control" />
@@ -41,7 +41,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="profile-main-left">
-                            <a href="profile.html" class="profile-link">Phm</a>
+                            <a href="/profile.html" class="profile-link">Phm</a>
                             <div class="col">
                                 <img src="assets/images/moi.jpg" alt="profile picture of user">
                             </div>
@@ -51,7 +51,7 @@
                                         Profile
                                     </button>
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                        <a class="dropdown-item" href="#">My Profile</a>
+                                        <a class="dropdown-item" href="/profile.html">My Profile</a>
                                         <a class="dropdown-item" href="#">Edit Profile</a>
                                     </div>
                                   </div>
@@ -113,7 +113,7 @@
                       height="50" alt="Avatar" loading="lazy" />
                     <div class="d-flex w-100 ps-3">
                       <div>
-                        <a href="profile.html">
+                        <a href="/profile.html">
                           <h6 class="text-body">
                             randomHero
                             <span class="small text-muted font-weight-normal">@randomHero</span>
@@ -177,7 +177,7 @@
                       height="50" alt="Avatar" loading="lazy" />
                     <div class="d-flex w-100 ps-3">
                       <div>
-                        <a href="profile.html">
+                        <a href="/profile.html">
                           <h6 class="text-body">
                             randomHero
                             <span class="small text-muted font-weight-normal">@randomHero</span>
