--- a/profile.html
+++ b/profile.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/3085842107.js" crossorigin="anonymous"></script>
-    <script defer src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    <link rel="stylesheet" href="dist/css/main.css">
+    <script defer src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <link rel="stylesheet" href="/dist/css/main.css">
     <title>css frameworks</title>
 </head>
 <body>
@@ -99,7 +99,7 @@
                                           height="50" alt="Avatar" loading="lazy" />
                                         <div class="d-flex w-100 ps-3">
                                           <div>
-                                            <a href="profile.html">
+                                            <a href="/profile.html">
                                               <h6 class="text-body">
                                                 randomHero
                                                 <span class="small text-muted font-weight-normal">@randomHero</span>
@@ -131,7 +131,7 @@
                                           height="50" alt="Avatar" loading="lazy" />
                                         <div class="d-flex w-100 ps-3">
                                           <div>
-                                            <a href="profile.html">
+                                            <a href="/profile.html">
                                               <h6 class="text-body">
                                                 Lislerud
                                                 <span class="small text-muted font-weight-normal">@Lislerud</span>
@@ -163,7 +163,7 @@
                                           height="50" alt="Avatar" loading="lazy" />
                                         <div class="d-flex w-100 ps-3">
                                           <div>
-                                            <a href="profile.html">
+                                            <a href="/profile.html">
                                               <h6 class="text-body">
                                                 OlivKing
                                                 <span class="small text-muted font-weight-normal">@OlivKing</span>
