--- a/login.html
+++ b/login.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/3085842107.js" crossorigin="anonymous"></script>
-    <script defer src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    <link rel="stylesheet" href="dist/css/main.css">
+    <script defer src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <link rel="stylesheet" href="/dist/css/main.css">
     <title>css frameworks</title>
 </head>
 <body>
@@ -21,9 +21,9 @@
                     <div class="col-sm">
                         <nav class="nav">
                             <ul class="list-inline">
-                                <li class="list-inline-item"><a href="index.html" class="nav-link"> Home</a></li>
-                                <li class="list-inline-item"><a href="profile.html" class="nav-link"> Profile</a></li>
-                                <li class="list-inline-item"><a href="login.html" class="nav-link">Log in</a></li>
+                                <li class="list-inline-item"><a href="/" class="nav-link"> Home</a></li>
+                                <li class="list-inline-item"><a href="/profile.html" class="nav-link"> Profile</a></li>
+                                <li class="list-inline-item"><a href="/login.html" class="nav-link">Log in</a></li>
                             </ul>
                             <div class="input-group">
                                 <input type="search" id="form1" class="form-control" />
@@ -40,7 +40,7 @@
             <div class="container-sm"><div class="border border-left border-right px-0">
                 <div class="p-3 border-bottom">
                     <p class="lead">Please put in your login details</p>
-                        <form class="form-login" action="profile.html">
+                        <form class="form-login" action="/profile.html">
                             <div class="mb-3">
                                 <label for="exampleInputEmail1" class="form-label">Email address</label>
                                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
